--- a/src/html/header.ejs
+++ b/src/html/header.ejs
@@ -74,7 +74,7 @@
     </svg>
   </a> -->
   <h1 class="title"> Big and small avocado‘s News </h1>
-  <h2 class="title"> <%= title %> </h2>
+  <h2 class="title" style="padding: 5px 0 0 0"> <%= title %> </h2>
   <div class="time">Last update on <%=date%>.</div>
   <div class="tabs">
     <a class="<%= tabCls === 'users' ? 'active': '' %>" href="index.html">Users</a>
